# testedjango

./: db.sqlite3  esse  oi  oi.py  oio  package-lock.json  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_autor.py  0003_alter_autor_options.py  0004_livros.py  0005_livros_categoria_livros_editora.py
livraria/: settings.py  urls.py
