[tool.poetry]
name = "kauane"
version = "0.1.0"
description = "primeira pasta da kakau"
authors = ["Kauane Delvoss Ribas <delvoss.ribas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
