[tool.poetry]
name = "kauane"
version = "0.1.0"
description = "primeira pasta da kakau"
authors = ["Kauane Delvoss Ribas <delvoss.ribas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
